Changelog
=========


1.0.0
-----

- Added Finnish language support ('# language: fi')
  [datakurre]
- Added parser support for Cucumber-like 'language' keyword
  [datakurre]
- Added parser support for 'Scenario Outline' and 'Examples'
  [datakurre]
- Added new step keyword *but* as on alias to *and*
  [datakurre]
- Modified decorators to name test modules and methods by normalizing
  their respective titles
  [datakurre]
- Completed support for story-level steps
  [datakurre]
- Ensure quotes (") are converted into apostrophes (')
  [datakurre]
- Fixed corejet-to-python.xsl to produce runnable test skeletons
  [datakurre]


1.0a4
-----

- Ensure multiple steps of the same type always execute in the right sequence.
  [optilude]


1.0a3
-----

- Fix broken package
  [optilude]


1.0a1
-----

- First release
  [optilude]